2009-09-01  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Timothy Hatcher.

        Implement conditional breakpoints in the Web Inspector backend
        and add frontend JavaScript stubs.
        https://bugs.webkit.org/show_bug.cgi?id=28846

        * inspector/InspectorBackend.cpp:
        (WebCore::InspectorBackend::profiles):
        (WebCore::InspectorBackend::addBreakpoint):
        (WebCore::InspectorBackend::updateBreakpoint):
        * inspector/InspectorBackend.h:
        * inspector/InspectorBackend.idl:
        * inspector/JavaScriptDebugServer.cpp:
        (WebCore::JavaScriptDebugServer::BreakpointInfo::condition):
        (WebCore::JavaScriptDebugServer::BreakpointInfo::setCondition):
        (WebCore::JavaScriptDebugServer::addBreakpoint):
        (WebCore::JavaScriptDebugServer::breakpointInfo):
        (WebCore::JavaScriptDebugServer::updateBreakpoint):
        (WebCore::JavaScriptDebugServer::updateBreakpointInfo):
        (WebCore::JavaScriptDebugServer::removeBreakpoint):
        (WebCore::JavaScriptDebugServer::hasBreakpoint):
        (WebCore::JavaScriptDebugServer::clearBreakpoints):
        * inspector/JavaScriptDebugServer.h:
        (WebCore::JavaScriptDebugServer::BreakpointInfo::BreakpointInfo):
        * inspector/front-end/Breakpoint.js:
        (WebInspector.Breakpoint):
        (WebInspector.Breakpoint.prototype.get id):
        (WebInspector.Breakpoint.prototype.get condition):
        (WebInspector.Breakpoint.prototype.set condition):
        * inspector/front-end/BreakpointsSidebarPane.js:
        (WebInspector.BreakpointsSidebarPane.prototype.addBreakpoint):
        (WebInspector.BreakpointsSidebarPane.prototype._breakpointEnableChanged):
        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype.addScript):

2009-09-01  Marius Renn  <damarvy@gmail.com>

        Reviewed by Eric Seidel.

        Added delegate to PluginDatabase to disable loading certain plugins.